code block styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,8 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* This targets the code block itself */
+.hljs {
+  border-radius: 8px;
+}
